--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -11,6 +11,7 @@
     <meta property="og:url" content="https://pizzariaouropreto.vercel.app">
     <meta property="og:type" content="website">
     <link rel="icon" type="image/png" href="./logo.png">
+    <title>Ouro Preto Pizzas</title>
     <meta
       name="description"
       content="Web site created using create-react-app"
